[package]
name = "NicoNicoNi"
version = "0.1.5"
authors = ["Abby <i@abby.md>"]
description="にっこにっこにー♪あなたのハートににこにこにー♪笑顔届ける矢澤にこにこー♪にこにーって覚えてラブにこー♪"
license="MIT OR Apache-2.0"
documentation="https://github.com/abbychau/nico_nico_ni"
homepage="https://github.com/abbychau/nico_nico_ni"
repository="https://github.com/abbychau/nico_nico_ni"


[dependencies]
ears = "0.5.1"
base64 = "0.9.3"